--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ footer{
     }
     header nav ul li{
      margin: 30px;
+     border:none;
+       background: none;
 
     }
 
@@ -201,7 +203,7 @@ footer{
     /* ------main........ */
     .productos{
         border: solid 2px;
-        width: 500px;
+        width: 400px;
         height: 300px;
     }
     main h3{
@@ -231,45 +233,14 @@ footer{
 
     }
     .carrito{
-        transition-duration: 1s;
-        transition-delay: 0.5s;
+        transition-duration: 0.5s;
+        transition-delay: 0s;
     }
     .carrito:hover{
         transform: scale(2);
 
     }
-    header p{
-        color: red;
-    }
-    .staff{
-       position: relative;
-       left: 250px;
-       
-       font-size: 50px;
-       border: solid 3px;
-       width: 300px;
-       height: 120px;
-       animation-name: staff;
-       animation-duration: 6s;
-       animation-iteration-count:infinite;
-       animation-direction: alternate-reverse;
-    }
-    @keyframes staff {
-        0%{
-            background-color:black;
-        }
-        25%{
-            background-color:white;
-            left: 500px;
-        }
-        50%{
-            background-color:black;
-            left: 700px;
-        }
-        100%{
-            background-color:white;
-            left: 900px;
-        }
-    }
-
+    
+   
+    
  }
